# It-Taketwo

./: .gitignore  ONLINE_GRPO.md  README.md  make_env_instance.sh  pyproject.toml
ConstructScene/: README.md  deploy_datapack_to_envs.py  deploy_mods_to_envs.py  generate_scenes.py
Puppet/: build.gradle  test_aim_pos.py  test_block_query.py  test_commands.py  test_f_keys.py  test_look.py  test_socket_puppet.py  test_two_dummies_move.py
bench/: README.md  bench_ctl.sh  training_style_bench.py
configs/: envmine_agent_loop.yaml  envmine_agent_loop_smoke.yaml  verl_minecraft_agent_loop.yaml  verl_minecraft_agent_loop_7b_n4.yaml  verl_minecraft_agent_loop_7b_n4_single_agent.yaml  verl_minecraft_agent_loop_mock.yaml
mc_rollout/: README.md  __init__.py  action_space.py  agent_driver.py  completion.py  game_functions.py  launch.py  prompts.py  rollout.py
scripts/: README.md  bootstrap_verl.sh  check_history_window.py  check_test_yaml.sh  check_verl_adapter.sh  check_verl_env.py  export_verl_steps.py  install_verl_env.sh  list_test_configs.sh  list_test_entries.sh  make_task_rollout_videos.py  package_training_bundle.sh  plot_rollouts_by_scene.py  prepare_envmine_verl_data.py  prepare_train_instances.sh  prepare_verl_minecraft_data.sh  prewarm_train_instances.py  record_three_views.py  render_rollout_videos.py  render_stitched_video.py  run_envmine_grpo.sh  run_envmine_grpo_smoke.sh  run_envmine_rollout.py  run_from_yaml.py  run_from_yaml.sh  run_lowlevel_batch.sh  run_lowlevel_episode.sh  run_test.sh  run_three_views.sh  run_verl_online_rl.sh  (+6 more)
test/: README.md  launch.py  (+3 more)
(+875 files in other folders)
