[project]
name = "envmine-verl-adapter"
version = "0.1.0"
description = "Wrapper workspace and adapter layer for EnvMine batched rollouts and verl integration."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "adapter"}

[tool.setuptools.packages.find]
where = ["adapter"]
